# TpTaller1

./: .gitignore  CMakeLists.txt  Enemy.cpp  Enemy.h  Player.cpp  Player.h  README.md  TpTaller1  config.xml  log_21:29:41.txt  log_22:28:41.txt  sdlDany.cpp  sdlDany.h
Sprites/Piskels/: Goomba.piskel  Heart.piskel  Luigi.piskel  LuigiMod.piskel  Mario-20201107-145029.piskel  Mario.piskel  MarioMod.piskel  Pipes.piskel  Waluigi.piskel  WaluigiMod.piskel  Wario.piskel  WarioMod.piskel  darkKoopa-20201107-150405.piskel  defaultMario.piskel  greenKoopa-20201107-145053.piskel  greenKoopaMod.piskel  pausedPlayer.piskel  redKoopa-20201107-145045.piskel  waluigi.piskel
Sprites/TiledMaps/: level1.tmx  level2.tmx  level3.tmx
lib/googletest-master/googlemock/: CMakeLists.txt
lib/googletest-master/googlemock/include/gmock/: gmock-matchers.h
lib/googletest-master/googlemock/scripts/generator/: README.cppclean
lib/googletest-master/googletest/: CMakeLists.txt
resources/: config.xml
src/: Camera.cpp  Camera.h  Client.cpp  Client.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameClient.cpp  GameClient.h  GameMap.cpp  GameMap.h  GameObject.cpp  GameObject.h  Hongo.cpp  Mario.cpp  Mario.h  Player.cpp  Player.h  Protocol.h  Socket.cpp  Socket.h  TextureManager.cpp  TextureManager.h  logger.cpp  logger.h  logger_exception.cpp  logger_exception.h  main.cpp  main.h
src/BackgroundStages/: BackgroundStage.cpp  BackgroundStage.h  FirstStage.cpp  FirstStage.h  SecondStage.cpp  SecondStage.h  ThirdStage.cpp  ThirdStage.h
src/CharacterStates/: CharacterState.cpp  CharacterState.h  Crouched.cpp  Crouched.h  Dying.cpp  Dying.h  EnemyMovement.cpp  EnemyMovement.h  Jumping.cpp  Jumping.h  Normal.cpp  Normal.h  Paused.cpp  Paused.h  Running.cpp  Running.h
src/Client/: Client.cpp  Client.h  ClientException.cpp  ClientException.h  ClientMsg.h  ClientParser.cpp  ClientParser.h  GameClient.cpp  GameClient.h  ServerClient.cpp  ServerClient.h
src/Factory/: Factory.cpp  Factory.h
src/Login/: Login.cpp  Login.h
src/Protocol/: GameMsgParams.h  InitializeGameMsg.h  MessageValidator.cpp  MessageValidator.h  Protocol.cpp  Protocol.h
src/Server/: Camera.cpp  Camera.h  GameServer.cpp  GameServer.h  PlayerClient.cpp  PlayerClient.h  Server.cpp  Server.h  ServerException.cpp  ServerException.h  ServerMsg.h  ServerParser.cpp  ServerParser.h
src/Socket/: Socket.cpp  Socket.h  SocketException.cpp  SocketException.h  SocketMsg.h
src/Utils/: CollisionsManager.cpp  CollisionsManager.h  IdGenerator.cpp  IdGenerator.h  Login.cpp  Login.h  MessageValidator.cpp  MessageValidator.h  MusicManager.cpp  MusicManager.h  Printer.cpp  Printer.h  Protocol.cpp  Protocol.h  Score.cpp  Score.h  Timer.cpp  Timer.h  Vector.cpp  Vector.h
src/config/: Config.cpp  Config.h  ConfigException.cpp  ConfigException.h  Constants.h
src/gameobjects/: Block.cpp  Block.h  Coin.cpp  Coin.h  Enemy.cpp  Enemy.h  EnemyMushroom.cpp  EnemyMushroom.h  EnemyTurtle.cpp  EnemyTurtle.h  GameObject.cpp  GameObject.h  Hole.cpp  Hole.h  Hongo.h  Mushroom.cpp  Mushroom.h  NormalBlock.cpp  NormalBlock.h  Pipe.cpp  Pipe.h  PlatformNormal.cpp  PlatformNormal.h  PlatformSurprise.cpp  PlatformSurprise.h  Player.cpp  Player.h  SurpriseBlock.cpp  SurpriseBlock.h
src/logger/: logger.cpp  logger.h  loggerException.cpp  loggerException.h
src/utils/: Printer.cpp  Printer.h
test/: config_test.cpp  factory_test.cpp  gamemap_test.cpp  logger_test.cpp
test/resources/: config_test.xml  config_test_broken_coin_quantity.xml  config_test_broken_enemy_quantity.xml  config_test_broken_height.xml  config_test_broken_level_number.xml  config_test_broken_platform_quantity.xml  config_test_broken_time.xml  config_test_broken_width.xml
